--- a/sources/Website/package.json
+++ b/sources/Website/package.json
@@ -22,7 +22,8 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-responsive-3d-carousel": "^2.1.1"
+    "react-responsive-3d-carousel": "^2.1.1",
+    "remark-github-admonitions-to-directives": "^2.1.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.6.3",
