Refactor to follow .NET 6.0 csharp10 rules (removed implicit long to IntPtr conversion). csharp12 is required to pass readonly ref to dx wrapper. Still wasn't able to build inside the solution

--- a/src/Lab/Experiments/ImGuiDX11/ImGuiDX11.csproj
+++ b/src/Lab/Experiments/ImGuiDX11/ImGuiDX11.csproj
@@ -4,6 +4,7 @@
         <TargetFrameworks>net5.0;net6.0</TargetFrameworks>
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <LangVersion>12</LangVersion>
     </PropertyGroup>
     
     <ItemGroup>
