--- a/.github/workflows/publish-site.yml
+++ b/.github/workflows/publish-site.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - 'main'
+    paths:
+      - "documentation/**/*"
 permissions:
   contents: read
   pages: write
@@ -12,31 +14,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Setup .NET 5.0
-      uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 5.0.401
-    - name: Setup .NET 6.0
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 6.0.201
-    - name: Setup .NET 7.0
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 7.0.102
-    - name: Run Statiq
-      run: dotnet run -c Release --project src/Website/Silk.NET.Statiq/Silk.NET.Statiq.csproj -- -l debug --nocache
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v1
-      with:
-        path: "docs"
-  Deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: Build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+        ref: "develop/3.0"
+        token: ${{ secrets.PUSHABLE_GITHUB_TOKEN }}
+    - run: |
+        git submodule update --init --recommend-shallow eng/submodules/silk.net-2.x
+        cd eng/submodules/silk.net-2.x
+        git fetch origin main
+        git checkout FETCH_HEAD
+        cd ../../..
+        git add eng/submodules/silk.net-2.x
+        git commit -m "Update Silk.NET 2.X submodule for website"
+        git push
