--- a/.github/workflows/publish-site.yml
+++ b/.github/workflows/publish-site.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Build Website
         run: |
           git submodule update --init eng/submodules/silk.net-2.x
