--- a/sources/Windowing/Windowing/Silk.NET.Windowing.csproj
+++ b/sources/Windowing/Windowing/Silk.NET.Windowing.csproj
@@ -2,8 +2,8 @@
 
     <PropertyGroup>
         <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
-        <TargetFrameworks Condition="$(SilkAndroidDisabled)' != 'true'">$(TargetFrameworks);net8.0-android;net9.0-android</TargetFrameworks>
-        <TargetFrameworks Condition="$(SilkiOSDisabled)' != 'true'">$(TargetFrameworks);net8.0-ios;net9.0-ios</TargetFrameworks>
+        <TargetFrameworks Condition="'$(SilkAndroidDisabled)' != 'true'">$(TargetFrameworks);net8.0-android;net9.0-android</TargetFrameworks>
+        <TargetFrameworks Condition="'$(SilkiOSDisabled)' != 'true'">$(TargetFrameworks);net8.0-ios;net9.0-ios</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <NoWarn>0067</NoWarn> <!-- TODO -->
