Clear locals to try and fix weird .NET SDK bug

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,7 +28,9 @@ jobs:
                 dotnet-version: '9.0.x'
                 #dotnet-quality: 'preview'
             - name: Install Workloads
-              run: dotnet workload restore
+              run: |
+                dotnet workload restore
+                dotnet nuget locals all --clear
             - name: Pack
               # TODO decide whether we want experimental builds to use Debug or Release - using Release for now...
               run: >-
@@ -81,7 +83,9 @@ jobs:
                 dotnet-version: '9.0.102'
                 #dotnet-quality: 'preview'
             - name: Install Workloads
-              run: dotnet workload restore
+              run: |
+                dotnet workload restore
+                dotnet nuget locals all --clear
             - name: Restore
               run: dotnet restore --runtime ${{ matrix.rid }}
             - name: Test
