Add workaround from dotnet/maui#27215

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -67,6 +67,7 @@
     <PackageVersionDependsOn>SilkShippingControl;$(PackageVersionDependsOn)</PackageVersionDependsOn>
     <TargetsForTfmSpecificContentInPackage>SilkNativePackaging;$(TargetsForTfmSpecificContentInPackage)</TargetsForTfmSpecificContentInPackage>
     <GenerateNuspecDependsOn>SilkShippingControl;$(GenerateNuspecDependsOn)</GenerateNuspecDependsOn>
+    <UseMonoRuntime>false</UseMonoRuntime>
   </PropertyGroup>
 
   <!-- SourceLink -->
