--- a/.gitattributes
+++ b/.gitattributes
@@ -83,6 +83,8 @@
 *.pdb binary
 *.bmp binary
 *.dat binary
+*.a binary
+*.o binary
 
 # Verify
 *.verified.txt text eol=lf working-tree-encoding=UTF-8
