Add InputMarshal and InputContextDeviceList, lay out SDL implementation

--- a/sources/Input/Input/Silk.NET.Input.csproj
+++ b/sources/Input/Input/Silk.NET.Input.csproj
@@ -4,6 +4,7 @@
         <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <NoWarn>ST0005;$(NoWarn)</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
