--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "eng/submodules/silk.net-2.x"]
 	path = eng/submodules/silk.net-2.x
 	url = https://github.com/dotnet/Silk.NET
+[submodule "eng/submodules/vulkan"]
+	path = eng/submodules/vulkan
+	url = https://github.com/KhronosGroup/Vulkan-Docs.git
