Add Vulkan-Headers repo as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "eng/submodules/vulkan"]
 	path = eng/submodules/vulkan
 	url = https://github.com/KhronosGroup/Vulkan-Docs.git
+[submodule "eng/submodules/vulkan-headers"]
+	path = eng/submodules/vulkan-headers
+	url = https://github.com/KhronosGroup/Vulkan-Headers.git
